# HyprDisJust

./: Cargo.toml  LICENSE  README.md  deny.toml
.github/workflows/: ci.yml
docs/: COMMANDS.md
src/: atomic.rs  cli.rs  config.rs  daemon.rs  doctor.rs  lib.rs  main.rs  process.rs  systemd.rs  text.rs
src/hyprland/: hyprctl.rs  ipc.rs  mod.rs  monitor.rs
src/profile/: apply.rs  match.rs  mod.rs  render.rs  store.rs  validation.rs
src/tui/: geometry.rs  mod.rs  model.rs
tests/: apply_safety.rs  cli_surface.rs  hyprland_ipc.rs  monitor_query.rs  output_safety.rs  process_runner.rs  profile_matching.rs  profile_store.rs  render_monitor_rules.rs  systemd_safety.rs  tui_model.rs
tests/fixtures/: hyprctl-monitors-desk.json  hyprctl-monitors-dock-renamed.json  hyprctl-monitors-inactive.json  hyprctl-monitors-laptop.json
