[package]
name = "hyprdisjust"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"
directories = "6"
ratatui = "0.30.2"
crossterm = "0.29.0"
clap_complete = "4.6.7"

[dev-dependencies]
pretty_assertions = "1"
tempfile = "3"
