[package]
name = "hyprdisjust"
version = "1.0.0"
edition = "2021"
rust-version = "1.89"
description = "Safe Hyprland monitor profile management, automatic matching, and hotplug handling"
repository = "https://github.com/MatejZvalo/HyprDisJust"
license = "MIT"
readme = "README.md"
keywords = ["hyprland", "monitor", "wayland", "cli", "tui"]
categories = ["command-line-utilities", "config"]
include = ["Cargo.toml", "Cargo.lock", "src/**", "tests/**", "README.md", "LICENSE", "CHANGELOG.md", "PRODUCTION_READINESS_PLAN.md", "docs/COMMANDS.md"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.1"
directories = "6"
libc = "0.2"
ratatui = { version = "0.30.2", default-features = false, features = ["crossterm"] }
crossterm = "0.29.0"
clap_complete = "4.6.7"

[dev-dependencies]
pretty_assertions = "1"
tempfile = "3"
